--- a/po/ka.po
+++ b/po/ka.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-06-07 22:09+0200\n"
+"POT-Creation-Date: 2010-06-08 10:41+0200\n"
 "PO-Revision-Date: 2010-03-12 09:14+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: georgian <ka@li.org>\n"
@@ -5402,6 +5402,17 @@ msgstr "სერვერის კონფიგურაცია"
 #, fuzzy
 msgid "Jump to database"
 msgstr "მონაცემთა ბაზები არაა"
+
+#: server_databases.php:267
+#, fuzzy
+msgid "Not replicated"
+msgstr "სერვერის კონფიგურაცია"
+
+#: server_databases.php:273
+#, fuzzy
+#| msgid "Replication"
+msgid "Replicated"
+msgstr "რეპლიკაცია"
 
 #: server_databases.php:289
 #, php-format
