--- a/po/es.po
+++ b/po/es.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-06-07 22:09+0200\n"
+"POT-Creation-Date: 2010-06-08 10:41+0200\n"
 "PO-Revision-Date: 2010-03-12 11:23+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: spanish <es@li.org>\n"
@@ -5493,6 +5493,17 @@ msgstr "Configuración del servidor"
 #, fuzzy
 msgid "Jump to database"
 msgstr "No hay bases de datos"
+
+#: server_databases.php:267
+#, fuzzy
+msgid "Not replicated"
+msgstr "Configuración del servidor"
+
+#: server_databases.php:273
+#, fuzzy
+#| msgid "Replication"
+msgid "Replicated"
+msgstr "Replicación"
 
 #: server_databases.php:289
 #, php-format
