--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-06-07 22:09+0200\n"
+"POT-Creation-Date: 2010-06-08 10:41+0200\n"
 "PO-Revision-Date: 2010-06-07 22:50+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
@@ -5306,6 +5306,18 @@ msgstr "Réplication esclave"
 msgid "Jump to database"
 msgstr "Aller à la base de données"
 
+#: server_databases.php:267
+#, fuzzy
+#| msgid "Master replication"
+msgid "Not replicated"
+msgstr "Réplication maître"
+
+#: server_databases.php:273
+#, fuzzy
+#| msgid "Replication"
+msgid "Replicated"
+msgstr "Réplication"
+
 #: server_databases.php:289
 #, php-format
 msgid "Check privileges for database &quot;%s&quot;."
@@ -8219,7 +8231,6 @@ msgid "Propose table structure"
 msgstr "Suggérer des optimisations quant à la structure de la table"
 
 #: tbl_structure.php:540
-#| msgid "Add column(s)"
 msgid "Add column"
 msgstr "Ajouter une colonne"
 
