--- a/po/sv.po
+++ b/po/sv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-06-07 22:09+0200\n"
+"POT-Creation-Date: 2010-06-08 10:41+0200\n"
 "PO-Revision-Date: 2010-03-12 09:19+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: swedish <sv@li.org>\n"
@@ -5412,6 +5412,17 @@ msgstr "Serverkonfiguration"
 #, fuzzy
 msgid "Jump to database"
 msgstr "Inga databaser"
+
+#: server_databases.php:267
+#, fuzzy
+msgid "Not replicated"
+msgstr "Serverkonfiguration"
+
+#: server_databases.php:273
+#, fuzzy
+#| msgid "Replication"
+msgid "Replicated"
+msgstr "Replikering"
 
 #: server_databases.php:289
 #, php-format
