--- a/po/uz@latin.po
+++ b/po/uz@latin.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-06-07 22:09+0200\n"
+"POT-Creation-Date: 2010-06-08 10:41+0200\n"
 "PO-Revision-Date: 2010-03-12 09:20+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: uzbek_latin <uz@latin@li.org>\n"
@@ -5502,6 +5502,18 @@ msgstr "Tobе sеrvеr rеplikatsiyasi"
 #| msgid "Go to database"
 msgid "Jump to database"
 msgstr "Ushbu bazaga o‘tish"
+
+#: server_databases.php:267
+#, fuzzy
+#| msgid "Master replication"
+msgid "Not replicated"
+msgstr "Bosh sеrvеr rеplikatsiyasi"
+
+#: server_databases.php:273
+#, fuzzy
+#| msgid "Replication"
+msgid "Replicated"
+msgstr "Replikatsiya (zaxira nusxa ko‘chirish)"
 
 #: server_databases.php:289
 #, php-format
