--- a/po/sl.po
+++ b/po/sl.po
@@ -5206,10 +5206,9 @@ msgid "Not replicated"
 msgstr "Ni podvojeno"
 
 #: server_databases.php:273
-#, fuzzy
 #| msgid "Replication"
 msgid "Replicated"
-msgstr "Podvojevanje"
+msgstr "Podvojeno"
 
 #: server_databases.php:289
 #, php-format
