patch #3013264 FAQ 1.40 correction

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   "Would you like to delete..." option
 - bug [privileges] List of tables not shown when the db name has a wildcard
 - bug #3011126 [display] Edit link missing after long query
+- patch #3013264 [doc] FAQ 1.40 uses a comma instead of a period,
+  thanks to Isaac Bennetch - ibennetch
 
 3.3.3.0 (2010-05-10)
 - patch #2982480 [navi] Do not group if there would be one table in group,
