--- a/po/fr.po
+++ b/po/fr.po
@@ -4456,10 +4456,9 @@ msgid "Not replicated"
 msgstr "Non répliqué"
 
 #: server_databases.php:273
-#, fuzzy
 #| msgid "Replication"
 msgid "Replicated"
-msgstr "Réplication"
+msgstr "Répliqué"
 
 #: server_databases.php:289
 #, php-format
