Translation update done using Pootle.

--- a/po/bg.po
+++ b/po/bg.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-03-12 09:12+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-06-09 10:15+0200\n"
+"Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
+"Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:38 browse_foreigners.php:59
 #: libraries/display_tbl.lib.php:417 server_privileges.php:1514
@@ -8198,286 +8199,5 @@ msgid "VIEW name"
 msgstr ""
 
 #: view_operations.php:93
-#, fuzzy
 msgid "Rename view to"
-msgstr "Преименуване на таблицата на"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Добавяне на ново поле"
-
-#~ msgid "Field"
-#~ msgstr "Поле"
-
-#~ msgid "Records"
-#~ msgstr "Записи"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Полетата завършват с"
-
-#~ msgid "Fields"
-#~ msgstr "Полета"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Полето %s беше изтрито"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Виж image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zip-нато\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzip-нато\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzip-нато\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Добавяне на коментар в хедъра (\\n нов ред)"
-
-#, fuzzy
-#~ msgid "and"
-#~ msgstr "и"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Забранено"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Позволено"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Поправяне на таблицата"
-
-#~ msgid "Calendar"
-#~ msgstr "Календар"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "MySQL&nbsp;4.0 съвместимо"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr ""
-#~ "Конфигурацията по подразбиране не може да бъде заредена от: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Създаване на индекс върху &nbsp;%s&nbsp;колони"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Създай нова Страница"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Няма"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Изчистване на кеша на таблицата (\"FLUSH\")"
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Описание"
-
-#, fuzzy
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Няма"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Схемата на база от данни \"%s\" - Страница %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Таблица \"%s\" не съществува!"
-
-#~ msgid "running on %s"
-#~ msgstr "работи на %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Мащаба е твърде малък за да се събере схемата на една страница"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Няма"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Няма"
-
-#, fuzzy
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Провери привилегиите за база от данни &quot;%s&quot;."
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Таблица \"%s\" не съществува!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr ""
-#~ "Конфигурацията по подразбиране не може да бъде заредена от: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Грешка при преименуване на таблица %1$s в %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "не мога да заредя разширението %s,<br />моля проверете конфигурацията на "
-#~ "PHP"
-
-#, fuzzy
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Не мога да се логна към MySQL сървъра"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Има известна вероятност да сте намерили бъг в SQL парсера. Моля проучете "
-#~ "по-добре, и проверете коректността на кавичките. Друга вероятна причина "
-#~ "за грешката може да бъде, че ъплоудвате файл с изпълним код извън "
-#~ "областта заградена с кавички. Можете също така да се опитате да изпълните "
-#~ "заявката чрез интерфейса за команден ред на MySQL. Грешката генерирана от "
-#~ "MySQL сървъра по-долу, ако има такава, може също да ви помогне при "
-#~ "откриването на проблема. Ако все още имате проблеми или парсера дава "
-#~ "грешка там където интерфейса на командния ред не връща такава, моля "
-#~ "ограничете вашите SQL заявки само до проблемната заявка, и изпратете "
-#~ "съобщение за бъг с парчето от данните в CUT секцията по-долу:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV данни"
-
-#~ msgid "Copy"
-#~ msgstr "Копиране"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr ""
-#~ "Изтриване на потребителите и след това презареждане на привилегиите."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Това е най-чистия начин, но презареждането на привилегиите може да отнеме "
-#~ "известно време."
-
-#~ msgid "has been altered."
-#~ msgstr "беше променена."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "&quot;Изтритите&quot; потребители ще имат достъп до сървъра както "
-#~ "обикновено, докато не се презаредят привилегиите."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Изтриване на потребителите от таблицата с привилегиите."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Позволява стартирането на съхранени процедури; Няма ефект в тази версия "
-#~ "на MySQL."
-
-#~ msgid "Process list"
-#~ msgstr "Списък на процесите"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Презареждане на привилегиите"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Потребителите все още ще имат USAGE привилегия докато не се презаредят "
-#~ "привилегиите."
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Селектиране на всичко"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Селектиране на всичко"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Вмъкване"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Допълни Запитването"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Изтриване"
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "януари0"
-
-#~ msgid "Jan1"
-#~ msgstr "януари1"
-
-#~ msgid "Jan2"
-#~ msgstr "януари2"
+msgstr "Преименуване на изгледа на"
