--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-09 10:15+0200\n"
+"PO-Revision-Date: 2010-06-09 10:16+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -8162,7 +8162,7 @@ msgstr ""
 
 #: themes.php:42
 msgid "Get more themes!"
-msgstr ""
+msgstr "Вземете си нови теми!"
 
 #: transformation_overview.php:25
 msgid "Available MIME types"
