--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-09 10:20+0200\n"
+"PO-Revision-Date: 2010-06-09 10:21+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -2922,7 +2922,7 @@ msgstr "Използване на INSERT IGNORE"
 
 #: libraries/export/sql.php:118
 msgid "Use hexadecimal for BLOB"
-msgstr ""
+msgstr "Използване на шестнадесетична стойност за BLOB"
 
 #: libraries/export/sql.php:120
 msgid "Export time in UTC"
