Translation update done using Pootle.

--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-09 10:22+0200\n"
+"PO-Revision-Date: 2010-06-09 10:26+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -2330,7 +2330,7 @@ msgstr "Релационна схема"
 
 #: libraries/display_tbl.lib.php:595
 msgid "Show binary contents"
-msgstr ""
+msgstr "Показване на двоичните данни"
 
 #: libraries/display_tbl.lib.php:597
 msgid "Show BLOB contents"
