--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-09 10:26+0200\n"
+"PO-Revision-Date: 2010-06-09 10:27+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -2338,7 +2338,7 @@ msgstr ""
 
 #: libraries/display_tbl.lib.php:599
 msgid "Show binary contents as HEX"
-msgstr "Показване на BLOB-данните"
+msgstr "Показване на двоичните данни в шестнадесетичен вид"
 
 #: libraries/display_tbl.lib.php:607 pmd_general.php:141 tbl_change.php:314
 #: tbl_change.php:320
