--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-09 10:32+0200\n"
+"PO-Revision-Date: 2010-06-09 10:34+0200\n"
 "Last-Translator:  <stanprog@stanprog.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
 "Language: bg\n"
@@ -7597,7 +7597,7 @@ msgstr ""
 
 #: sql.php:513
 msgid "Showing as PHP code"
-msgstr ""
+msgstr "Показване като PHP-код"
 
 #: sql.php:516 tbl_replace.php:360
 msgid "Showing SQL query"
